--- a/Slides.qmd
+++ b/Slides.qmd
@@ -49,9 +49,9 @@ format:
 | **Time**          | **Activity**                |
 |:--------------|:------------------------|
 | 13:45 - 14:15 | Introduction to LF2L and key concepts |
-| 14:15 - 15:00 | **Design** |
-| 15:00 - 15:20 | *Break* 🍏        |
-| 15:20 - 16:00 |  **Fabricate** |
+| 14:15 - 15:15 | **Design** |
+| 15:15 - 15:30 | *Break* 🍏        |
+| 15:30 - 16:00 |  **Fabricate** |
 | 16:00 - 16:45 |  **Documentate** |
 
 
@@ -349,4 +349,11 @@ Designers, as well as managers, developers, customers and end users, can use the
 
 # TP: Design your prototype
 
+
+1. DIY some tutorials on Inkscape on 🎥 Youtube
+
+- [https://www.youtube.com/watch?v=GSGaY0-4iik](https://www.youtube.com/watch?v=GSGaY0-4iik)
+- [https://www.youtube.com/watch?v=z0XITUisezE](https://www.youtube.com/watch?v=z0XITUisezE)
+
+There are others. It's up to you 💪
 
