--- a/Slides.qmd
+++ b/Slides.qmd
@@ -5,7 +5,7 @@ author:
 subtitle: 'An introduction'
 email: "cruzsanc1@univ-lorraine.fr"
 institute: "Université de Lorraine | ENSGSI"
-date: 13-Feb-2023
+date: 20-Feb-2023
 
 format:
   revealjs:
@@ -54,9 +54,9 @@ library(countdown)
 | **Time**          | **Activity**                |
 |:--------------|:------------------------|
 | 13:45 - 14:15 | Introduction to LF2L and key concepts |
-| 14:15 - 15:15 | **Design** |
+| 14:15 - 15:15 | **Exercice 1: Design + Fabrication** |
 | 15:15 - 15:30 | *Break* 🍏        |
-| 15:30 - 16:00 |  **Fabricate** |
+| 15:30 - 16:00 |  **Exercice 2: Design + Fabrication** |
 | 16:00 - 16:45 |  **Documentate** |
 
 
