--- a/Slides.qmd
+++ b/Slides.qmd
@@ -5,7 +5,7 @@ author:
 subtitle: 'An introduction'
 email: "cruzsanc1@univ-lorraine.fr"
 institute: "Université de Lorraine | ENSGSI"
-date: 20-Feb-2023
+date: 12-03-2023
 
 format:
   revealjs:
@@ -49,18 +49,6 @@ library(countdown)
 
 # Planning
 
-## Planning
-
-| **Time**          | **Activity**                |
-|:--------------|:------------------------|
-| 13:45 - 14:15 | Introduction to LF2L and key concepts |
-| 14:15 - 15:15 | **Exercice 1: Design + Fabrication** |
-| 15:15 - 15:30 | *Break* 🍏        |
-| 15:30 - 16:00 |  **Exercice 2: Design + Fabrication** |
-| 16:00 - 16:45 |  **Documentate** |
-
-
-
 ## Goal of the day
 
 
@@ -74,7 +62,7 @@ library(countdown)
 :::
 ::: {.column width="30%"}
 ### Fabricate
-![](figures/2022-04-01-gf.jpg){width="100%" fig-align="center"} 
+![](figures/Decoupe.png){width="100%" fig-align="center"} 
 
 [https://fabmanager.lf2l.fr/](https://fabmanager.lf2l.fr/)
 :::
@@ -87,132 +75,26 @@ library(countdown)
 
 
 
+## but first, lets *'esquisse'*
 
+![](figures/Exquisse.png){width="50%" fig-align="center"} 
 
 
-# Engineering and  'Âge du Faire / DIY'
+```{r echo=FALSE}
+countdown(minutes = 10, font_size = "2.5em", color_background="#AED6F1")
+```
 
-## What is the meaning of "Engineer" for you ?
 
-::: {.fragment}
 
-The word **Engineer** (Latin *Ingeniator*) is derived from the Latin words **Ingeniare** ("to contrive, devise") and **Ingenium** ("cleverness").
+## Planning
 
-:::
-
-
-
-## Fab Lab and how to do (almost) anything
-
-
-:::aside
-Source: [https://cba.mit.edu/classes/](https://cba.mit.edu/classes/)
-:::
-
-## Unleash your creativity in a Fab Lab. Feb 2006
-
-<div style="max-width:1400px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/neil_gershenfeld_unleash_your_creativity_in_a_fab_lab" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
-
-Source: https://www.ted.com/talks/neil_gershenfeld_unleash_your_creativity_in_a_fab_lab
-
-
-
-## What is a Fablab?
-
-![](figures/Definition-01.png){width="90%" fig-align="center"} 
-
-Source: [https://fab.cba.mit.edu/about/charter/](https://fab.cba.mit.edu/about/charter/)
-
-
-## Personal Fabrication {background-image="figures/Example-1.png"  background-size="40%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br> <br>
-Source: <br> [Avec Airbus et un fablab, il fabrique sa prothèse high-tech](https://www.ladepeche.fr/article/2018/02/24/2748525-airbus-fablab-fabrique-prothese-high-tech.html)
-
-[https://www.facebook.com/PrintMyLeg/](https://www.facebook.com/PrintMyLeg/)
-
-
-## Personal Fabrication {background-image="figures/Example-2.png"  background-size="40%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab and Handicap: <br> [https://myhumankit.org/](https://myhumankit.org/)
-
-
-## Personal Fabrication {background-image="figures/Example-3.png"  background-size="50%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab and Music: <br> [https://lowtechlab.org/fr](https://lowtechlab.org/fr)
-
-
-
-## Personal Fabrication {background-image="figures/Example-7.png"  background-size="60%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab and Music
-
-
-## Personal Fabrication {background-image="figures/Example-8.png"  background-size="60%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-
-### Fablab and Music
-
-Source: [Matt Keeter - Fab Boombox](https://fab.cba.mit.edu/classes/863.11/people/matthew.keeter/fab_boombox/index.html)
-
-
-
-
-
-## Personal Fabrication {background-image="figures/Example-4.png"  background-size="50%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab et Fashion: <br> [https://class.textile-academy.org/](https://class.textile-academy.org/classes/2023-24/)
-
-![](figures/Joins.jpg){width="100" fig-align="left"} 
-
-## Personal Fabrication {background-image="figures/Example-5.png"  background-size="50%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab and Agriculture: <br> [https://www.latelierpaysan.org/](https://www.latelierpaysan.org/)
-
-
-
-## Personal Fabrication {background-image="figures/Example-6.png"  background-size="50%" background-position="100% 50%"} 
-
-*Products for a market of **one person***
-
-<br><br>
-
-### Fablab and Architecure: <br> [Fablab House Barcelone](https://archello.com/project/the-fab-lab-house)
-
-
-
-
-## New approch for engineering... {.center} 
-
-
-
-
+| **Time**          | **Activity**                |
+|:--------------|:------------------------|
+| 13:45 - 14:15 | Introduction to LF2L and key concepts |
+| 14:15 - 15:15 | **Exercice 1: Design + Fabrication** |
+| 15:15 - 15:30 | *Break* 🍏        |
+| 15:30 - 16:00 |  **Exercice 2: Design + Fabrication** |
+| 16:00 - 16:45 |  **Documentate** |
 
 # Lorraine Fab Living Lab
 
@@ -429,4 +311,133 @@ Additional DIY 🎥 Youtube tutorials if you need:
 :::{.aside}
 Tutorial 🎥 Youtube: [https://www.youtube.com/watch?v=wiqUrzzHszI&t=690s](https://www.youtube.com/watch?v=wiqUrzzHszI&t=690s)
 :::
+
+
+
+
+
+
+
+
+
+# Engineering and  'Âge du Faire / DIY'
+
+## What is the meaning of "Engineer" for you ?
+
+::: {.fragment}
+
+The word **Engineer** (Latin *Ingeniator*) is derived from the Latin words **Ingeniare** ("to contrive, devise") and **Ingenium** ("cleverness").
+
+:::
+
+
+
+## Fab Lab and how to do (almost) anything
+
+
+:::aside
+Source: [https://cba.mit.edu/classes/](https://cba.mit.edu/classes/)
+:::
+
+## Unleash your creativity in a Fab Lab. Feb 2006
+
+<div style="max-width:1400px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/neil_gershenfeld_unleash_your_creativity_in_a_fab_lab" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div>
+
+Source: https://www.ted.com/talks/neil_gershenfeld_unleash_your_creativity_in_a_fab_lab
+
+
+
+## What is a Fablab?
+
+![](figures/Definition-01.png){width="90%" fig-align="center"} 
+
+Source: [https://fab.cba.mit.edu/about/charter/](https://fab.cba.mit.edu/about/charter/)
+
+
+## Personal Fabrication {background-image="figures/Example-1.png"  background-size="40%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br> <br>
+Source: <br> [Avec Airbus et un fablab, il fabrique sa prothèse high-tech](https://www.ladepeche.fr/article/2018/02/24/2748525-airbus-fablab-fabrique-prothese-high-tech.html)
+
+[https://www.facebook.com/PrintMyLeg/](https://www.facebook.com/PrintMyLeg/)
+
+
+## Personal Fabrication {background-image="figures/Example-2.png"  background-size="40%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab and Handicap: <br> [https://myhumankit.org/](https://myhumankit.org/)
+
+
+## Personal Fabrication {background-image="figures/Example-3.png"  background-size="50%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab and Music: <br> [https://lowtechlab.org/fr](https://lowtechlab.org/fr)
+
+
+
+## Personal Fabrication {background-image="figures/Example-7.png"  background-size="60%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab and Music
+
+
+## Personal Fabrication {background-image="figures/Example-8.png"  background-size="60%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+
+### Fablab and Music
+
+Source: [Matt Keeter - Fab Boombox](https://fab.cba.mit.edu/classes/863.11/people/matthew.keeter/fab_boombox/index.html)
+
+
+
+
+
+## Personal Fabrication {background-image="figures/Example-4.png"  background-size="50%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab et Fashion: <br> [https://class.textile-academy.org/](https://class.textile-academy.org/classes/2023-24/)
+
+![](figures/Joins.jpg){width="100" fig-align="left"} 
+
+## Personal Fabrication {background-image="figures/Example-5.png"  background-size="50%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab and Agriculture: <br> [https://www.latelierpaysan.org/](https://www.latelierpaysan.org/)
+
+
+
+## Personal Fabrication {background-image="figures/Example-6.png"  background-size="50%" background-position="100% 50%"} 
+
+*Products for a market of **one person***
+
+<br><br>
+
+### Fablab and Architecure: <br> [Fablab House Barcelone](https://archello.com/project/the-fab-lab-house)
+
+
+
+
+## New approch for engineering... {.center} 
+
 
