--- a/Slides.qmd
+++ b/Slides.qmd
@@ -16,7 +16,7 @@ format:
     width: 1600
     height: 900
     theme: [default, "assets/custom.scss"]
-    logo: "assets/img/logos/ENSGSI.png"
+    logo: "figures/ENSGSI.png"
     #embed-resources: false
     echo: false
     pdf-separate-fragments: true
@@ -27,18 +27,11 @@ format:
     number-sections: false
     fig-align: center
     code-copy: true        
-    header-logo: "assets/img/logos/UL.png"    
+    header-logo: "figures/UL.png"    
     #subtitle-as-header: true
     sc-sb-title: false
     chalkboard: true
-# #use reveal-header extension if you need both header and footer on slides. They are declared in the presentation.qmd file
-# filters:
-#   - reveal-header
-#   - reveal-auto-agenda
-# #slide-level: 3
-# auto-agenda:
-#   bullets: numbered
-#   heading: Agenda for today
+
 ---
 
 
