--- a/Slides.qmd
+++ b/Slides.qmd
@@ -74,7 +74,7 @@ library(countdown)
 
 
 ```{r echo=FALSE}
-countdown(minutes = 10, font_size = "2.5em", color_background="#AED6F1")
+countdown(minutes = 2, font_size = "2.5em", color_background="#AED6F1")
 ```
 
 
@@ -86,8 +86,8 @@ countdown(minutes = 10, font_size = "2.5em", color_background="#AED6F1")
 | 13:45 - 14:15 | Introduction to LF2L and key concepts |
 | 14:15 - 15:15 | **Exercice 1: Design + Fabrication** |
 | 15:15 - 15:30 | *Break* 🍏        |
-| 15:30 - 16:00 |  **Exercice 2: Design + Fabrication** |
-| 16:00 - 16:45 |  **Documentate** |
+| 15:30 - 16:00 |  **Exercice 2: Electronics** |
+| 16:00 - 16:45 |  **Documentation** |
 
 # Lorraine Fab Living Lab
 
@@ -352,6 +352,12 @@ Vous devez etre conneztez au Réseaux: **eduroam**
 :::
 
 :::
+
+
+
+
+# Electronic
+
 
 
 # Engineering and  'Âge du Faire / DIY'
