--- a/TP1.qmd
+++ b/TP1.qmd
@@ -23,7 +23,7 @@ format:
           \usepackage{fancyhdr}
           \pagestyle{fancy}          
           \fancyhead[R]{ENSGSI - 2024/2025}
-          \fancyhead[C]{ENSGSI - 2024/2025}
+          \fancyhead[C]{Introduction à l'âge du faire et du DIY}
           \fancyhead[L]{\includegraphics[width=2cm]{figures/ENSGSI.png}}
           
           \fancyfoot[L]{Fabio CRUZ}
@@ -43,7 +43,7 @@ Il doit être distinctive et mémorable.
 
 # Instructions :
 
-**1. Dessinez le prototype à la mains:** 
+**1. Dessinez le prototype à la main:** 
 
 \begin{center}
 \begin{tikzpicture}
